tests/invalid/interpolation_method_invalid.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "LegacyRegriddingBlockRejected",
    "description": "Test case: a data loader still carrying the legacy 'regridding' block. Regridding was removed from DataLoader in RFC pure-io-data-loaders §4.1 (it is now a per-variable model concern); DataLoader.additionalProperties:false rejects the stale block.",
    "authors": ["Test Suite"]
  },

  "data_loaders": {
    "BadInterpolation": {
      "kind": "grid",
      "source": { "url_template": "file:///data/{date:%Y%m%d}.nc" },
      "variables": {
        "T": { "file_variable": "T", "units": "K" }
      },
      "regridding": { "extrapolation": "invalid_extrapolation_method" }
    }
  },

  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "1", "default": 1.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "*", "args": [-0.1, "x"] }
        }
      ]
    }
  }
}
